individual films bottom cropped on mobile landscape fix

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2075,33 +2075,6 @@ $modal-bp: $grid-bp;
 
 
 
-@media (max-width: $bp-sm) and (min-height: 400px) and (max-height: 812px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 3){ // target iphone pro 11
-  .modal-grid-wrapper .modal-player-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .modal-grid-wrapper .modal-player-wrapper div {
-    max-width: 440px; // height will not exceed 330px
-    margin: 0 auto;
-    padding-bottom: 0;
-  }
-}
-
-
-@media (max-width: $bp-sm) and (max-height: 400px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 3){ // target iphones landscape 812 x 375
-  .modal-grid-wrapper .modal-player-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .modal-grid-wrapper .modal-player-wrapper div {
-    max-width: 440px; // height will not exceed 330px
-    margin: 0 auto;
-    padding-bottom: 0;
-  }
-}
-
 
 
 @media (max-height: 380px) and (orientation: landscape) {
@@ -2246,3 +2219,72 @@ $modal-bp: $grid-bp;
 .touch .modal-player-wrapper.iframe-wrapper {
   background: $dark;
 }
+
+// modal fixes for all iphones
+
+
+@mixin modalSizerForIphones() {
+  .modal-grid-wrapper .modal-player-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .modal-grid-wrapper .modal-player-wrapper div {
+    max-width: 440px; // height will not exceed 330px
+    margin: 0 auto;
+    padding-bottom: 0;
+  }
+}
+
+
+
+/* 2340x1080 pixels at 476ppi */
+@media only screen 
+    and (device-width: 375px) 
+    and (device-height: 812px) 
+    and (-webkit-device-pixel-ratio: 3) { @include modalSizerForIphones(); } 
+
+// This media query is for: iPhone 12 Mini, iPhone 11 Pro, iPhone Xs, and iPhone X
+// iPhone 12 and iPhone 12 Pro
+
+/* 2532x1170 pixels at 460ppi */
+@media only screen 
+    and (device-width: 390px) 
+    and (device-height: 844px) 
+    and (-webkit-device-pixel-ratio: 3) { @include modalSizerForIphones(); }
+
+// This media query is for: iPhone 12 and iPhone 12 Pro
+// iPhone 12 Pro Max
+
+/* 2778x1284 pixels at 458ppi */
+@media only screen 
+    and (device-width: 428px) 
+    and (device-height: 926px) 
+    and (-webkit-device-pixel-ratio: 3) { @include modalSizerForIphones(); }
+
+// iPhone 11
+
+/* 1792x828px at 326ppi */
+@media only screen 
+    and (device-width: 414px) 
+    and (device-height: 896px) 
+    and (-webkit-device-pixel-ratio: 2) { @include modalSizerForIphones(); }
+
+// This media query is for: iPhone 11 and iPhone XR
+// iPhone 11 Pro
+
+/* 2436x1125px at 458ppi */
+@media only screen 
+    and (device-width: 375px) 
+    and (device-height: 812px) 
+    and (-webkit-device-pixel-ratio: 3) { @include modalSizerForIphones(); }
+
+// This media query is for: iPhone 12 Mini, iPhone 11 Pro, iPhone Xs, and iPhone X
+// iPhone 11 Pro Max
+
+/* 2688x1242px at 458ppi */
+@media only screen 
+    and (device-width: 414px) 
+    and (device-height: 896px) 
+    and (-webkit-device-pixel-ratio: 3) { @include modalSizerForIphones(); }
+
